--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,29 +10,29 @@ h1 {
     margin: 1rem;
 }
 
-.cards {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+table {
+    width: 50%;
+    border-collapse: collapse;
+    margin-top: 1rem;
 }
 
-.card {
-    flex-basis: 31%;
-    margin: 1rem 0.4rem;
-    padding: 1rem 0.4rem 2.5rem 0.4rem;
-    border: solid 1px lightgrey;
-    border-radius: 15px;
-    box-shadow: 3px 2px 6px lightgrey;
+thead {
+    background-color: rgb(245, 183, 221);
 }
 
-.card__email {
-    font-size: 1rem;
+th, td {
+    padding: 10px;
+    border: 1px solid #dddddd;
+    text-align: left;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
 
 .form-wrapper {
-    font-size: 18px;
-    max-width: 768px;
+    font-family: 'Roboto', sans-serif;
+    max-width: 400px;
     margin: 2rem auto;
     padding: 2rem;
     border: solid 1px lightgrey;
@@ -40,14 +40,20 @@ h1 {
     box-shadow: 3px 2px 6px lightgrey;
 }
 
-label, input {
-    margin-top: 5px;
+.form-group {
+    margin-bottom: 1rem;
+}
+
+label {
     display: block;
-    font-size: inherit;
+    margin-bottom: 0.5rem;
 }
 
 input[type="text"] {
-    padding: .25rem;
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 input[type="submit"] {
